<resources>
    <string name="app_name">Bit Classroom</string>
    <string name="welcome">Welcome</string>
    <string name="bitclassroom">bitClassroom</string>
    <string name="welcome_text">
        Teachers can invite students or share a code with their class to join.
        It takes just minutes to set up.
        The simple, paperless assignment workflow allows teachers to create,
        review, and grade assignments quickly, all in one place.</string>
    <string name="enter_site">Enter classroom</string>
    <string name="hint_email">Email</string>
    <string name="sign_in_title">Sign in to enter application!</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="no_network">No network</string>
</resources>
